# n8n-workflow-analyzer

./: .context-summary.md  .gitignore  README.md  cost_model.example.yaml  pyproject.toml
docs/: corpus_downloads.md  unknown_node_review.md
examples/: analysis.json  collection_analysis.json  collection_report.md  corpus_eval_summary.json  report.md
examples/audit_pack_real_workflows/: analysis.json  client_action_plan.md  corpus_eval_report.md  corpus_eval_summary.json  executive_summary.md  technical_report.md
examples/demo_pack/: CHANGELOG_DEMO.md  README_DEMO.md  analysis.json  client_action_plan.md  demo_pack_manifest.json  executive_summary.md  internal_product_review.md  review_checklist.md  sample_offer.md  technical_report.md
examples/real_workflows/: ai.json  backupn8n.json  chathub.json  email.json  rag.json  salesforce.json  scrape.json  scrape2.json  trackseo.json
landing/: .dockerignore  DEPLOY.md  README.md  fly.toml  index.html  privacy.html  sample-report.html  thank-you.html
landing_launch_assets/: IDE_INTEGRATION_PROMPT.md  LANDING_FILE_MANIFEST.md  LAUNCH_CHECKLIST.md  README.md
pilot_pack/: pilot_feedback_form.md  pilot_instructions.md  sample_outreach_message.md  workflow_anonymization_guide.md
scripts/: download_n8n_templates.py
tests/: test_audit_pack.py  test_cli.py  test_cost_model.py  test_download_n8n_templates.py  test_json_report.py  test_node_classifier.py  test_parser.py  test_real_workflow_corpus.py  test_recommendations.py  test_report.py  test_rules.py  test_scoring.py  test_text_helpers.py  test_workflow_ranking.py
(+222 files in other folders)
