[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "n8n-cost-analyzer"
version = "0.7.1"
description = "Local/offline cost, risk and architecture analyzer for n8n workflows"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
include = ["src", "tests"]
